fix: alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,6 +134,10 @@
   /* SECTIONS */
   --section-background-color: #d7d9d6;
   --default-colored-text: #726248;
+
+  /* POLICY TEMPLATE */
+  --policy-template-link-color: #947F5F;
+  --policy-template-borders: #A49F94;
 }
 
 /* fallback fonts */
@@ -484,7 +488,7 @@ main .section.float-right .default-content-wrapper .content-wrapper ul li::befor
 .policy-template main .default-content-wrapper p strong em {
   letter-spacing: 0.01em;
   font-weight: 450;
-  color: #947F5F;
+  color: var(--policy-template-link-color);
 }
 
 main .section.float-right .default-content-wrapper .content-wrapper ul li em {
@@ -608,7 +612,11 @@ main .section.light-grey-bg:has(.cards-wrapper) .default-content-wrapper {
 }
 
 .policy-template main .default-content-wrapper h2 {
-  padding-top: 50px;
+  padding-top: 60px;
+}
+
+.policy-template main .default-content-wrapper ul {
+  padding-left: 100px;
 }
 
 main .section.light-grey-bg .default-content-wrapper h2 {
@@ -699,7 +707,7 @@ main .section.soft-grey-bg.default-colored-text p {
 
 .policy-template main .section .default-content-wrapper p:last-child {
   padding-bottom: 50px;
-  border-bottom: 1px solid #A49F94;
+  border-bottom: 1px solid var(--policy-template-borders);
 }
 
 .policy-template main .section:last-of-type .default-content-wrapper p:last-child {
@@ -707,7 +715,7 @@ main .section.soft-grey-bg.default-colored-text p {
 }
 
 .policy-template main .section .default-content-wrapper li::marker {
-  color: #A49F94;
+  color: var(--policy-template-borders);
 }
 
 .policy-template main .default-content-wrapper p u,
@@ -717,10 +725,19 @@ main .section.soft-grey-bg.default-colored-text p {
 }
 
 .policy-template main .default-content-wrapper p a {
+  color: var(--site-color-2);
+  transition: color 0.5s;
+  text-decoration: none;
+  position: relative;
+  display: inline-block;
+}
+
+.policy-template main .default-content-wrapper p em a {
   color: black;
   text-decoration: none;
   pointer-events: none;
   cursor: default;
+  font-style: normal;
 }
 
 .policy-template main .default-content-wrapper p strong {
@@ -729,5 +746,11 @@ main .section.soft-grey-bg.default-colored-text p {
 
 .policy-template main .default-content-wrapper p strong u {
   font-weight: bold;
-  color: #947F5F;
+  color: var(--policy-template-link-color);
+}
+
+@media (width >= 900px) {
+  .policy-template main .default-content-wrapper h2 {
+    padding-top: 100px;
+  }
 }
